# clean-architecture-rust-example

./: Cargo.toml  README.md
src/: main.rs
src/application_business_rules/usecase/: student.rs
src/enterprise_business_rules/domain/: model.rs
src/enterprise_business_rules/domain/entity/: student.rs
src/enterprise_business_rules/domain/model/: student.rs
src/enterprise_business_rules/domain/repository_interface/: student.rs
src/interface_adaptors/handler/: student.rs
src/interface_adaptors/repository/: student.rs
