[package]
name = "clean-architecture-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
